<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:layout_alignParentTop="true"
            android:background="@drawable/side_nav_bar"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:orientation="vertical"
            android:gravity="bottom">

        <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/imageView"/>

        <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textStyle="bold"
                tools:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="4dp"
                tools:text="@string/nav_header_subtitle"
                android:id="@+id/textView"/>
    </LinearLayout>

</RelativeLayout>