<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroller_forget"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="100dp"
                android:background="@color/silver"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/silver"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/oldPassword"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/old_pass_lbl"
                        android:inputType="textPassword"
                        android:maxLength="255"
                        android:paddingBottom="13dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/new_pass_lbl"
                        android:inputType="textPassword"
                        android:maxLength="255"
                        android:paddingBottom="13dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/comfirm_pass_lbl"
                        android:inputType="textPassword"
                        android:maxLength="255"
                        android:paddingBottom="13dp"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/change"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/normal_button_style"
                        android:text="@string/change_pass_lbl"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>