<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scroller_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/login_logo_width"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@color/silver"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/silver"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email_textbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/enter_email_address"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="13dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/password_textbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:paddingBottom="13dp" />

                    <Button
                        android:id="@+id/signin_button"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/normal_button_style"
                        android:text="@string/login"
                        android:textColor="@android:color/white" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/not_a_member_yet"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line" />
            </LinearLayout>

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"
                android:background="@drawable/create"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/create_a_new_account"
                android:textColor="@color/dark_grey"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>