<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context=".ForgotPassword">


    <ScrollView
            android:id="@+id/scroller_forget"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_logo"
                    android:layout_height="@dimen/login_logo_height"
                    android:layout_width="@dimen/login_logo_width"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/logo"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"/>

            <androidx.cardview.widget.CardView
                    android:layout_marginBottom="100dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:padding="2dp"
                    android:background="@color/silver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@color/silver"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <EditText
                            android:layout_marginTop="10dp"
                            android:id="@+id/email_textbox_reset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:paddingBottom="13dp"
                            android:maxLength="255"
                            android:layout_marginBottom="5dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/enter_email_address"
                            android:singleLine="true"/>

                    <Button
                            android:id="@+id/signin_button_reset"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/normal_button_style"
                            android:text="@string/forget_reset_password"
                            android:textColor="@android:color/white"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:tint="@color/red"
                                app:srcCompat="@drawable/ic_info_black_24dp"/>

                        <TextView
                                android:layout_marginStart="10dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/forget_info"
                                android:textSize="12sp"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>